WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274193
REGRESSION(
278304@main
): Caused lower numbers on canvas sub-tests when rerunning MotionMark
https://bugs.webkit.org/show_bug.cgi?id=274193
Summary
REGRESSION(278304@main): Caused lower numbers on canvas sub-tests when rerunn...
Said Abou-Hallawa
Reported
2024-05-14 18:27:50 PDT
Revert
278304@main
because Caused lower numbers on canvas sub-tests when rerunning MotionMark.
Attachments
Add attachment
proposed patch, testcase, etc.
Said Abou-Hallawa
Comment 1
2024-05-14 18:28:31 PDT
<
rdar://problem/128019812
>
Said Abou-Hallawa
Comment 2
2024-05-14 18:43:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28580
EWS
Comment 3
2024-05-14 19:36:35 PDT
Committed
278790@main
(386d8d2d74f5): <
https://commits.webkit.org/278790@main
> Reviewed commits have been landed. Closing PR #28580 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug