REGRESSION(278304@main): Caused lower numbers on canvas sub-tests when rerunning MotionMark https://bugs.webkit.org/show_bug.cgi?id=274193 rdar://128019812

Unreviewed: This reverts commit 78038e7ea408ff3a2869d9394ba4dff327492d9c.

Canvas tests fall back to unaccelerated rendering when rerunning MotionMark.

Canonical link: https://commits.webkit.org/278790@main