Source/WebKit/GPUProcess/graphics/RemoteRenderingBackend.cpp
@@ -208,9 +208,6 @@ void RemoteRenderingBackend::didFailCreateImageBuffer(RenderingResourceIdentifie
 
 void RemoteRenderingBackend::didCreateImageBuffer(Ref<ImageBuffer> imageBuffer)
 {
-    if (imageBuffer->renderingMode() == RenderingMode::Accelerated)
-        m_sharedResourceCache->didAddAcceleratedImageBuffer();
-
     auto imageBufferIdentifier = imageBuffer->renderingResourceIdentifier();
     auto* sharing = imageBuffer->toBackendSharing();
     auto handle = downcast<ImageBufferBackendHandleSharing>(*sharing).createBackendHandle();
@@ -287,8 +284,6 @@ RefPtr<ImageBuffer> RemoteRenderingBackend::allocateImageBuffer(const FloatSize&
 #endif
 
     RefPtr<ImageBuffer> imageBuffer;
-    if (renderingMode == RenderingMode::Accelerated)
-        renderingMode = m_sharedResourceCache->adjustAcceleratedImageBufferRenderingMode(purpose);
 
 #if ENABLE(RE_DYNAMIC_CONTENT_SCALING)
     if (m_gpuConnectionToWebProcess->isDynamicContentScalingEnabled() && (purpose == RenderingPurpose::LayerBacking || purpose == RenderingPurpose::DOM))
@@ -319,8 +314,8 @@ void RemoteRenderingBackend::releaseImageBuffer(RenderingResourceIdentifier rend
 {
     assertIsCurrent(workQueue());
     m_remoteDisplayLists.take(renderingResourceIdentifier);
-    auto imageBuffer = takeImageBuffer(renderingResourceIdentifier);
-    MESSAGE_CHECK(imageBuffer, "Resource is being released before being cached."_s);
+    bool success = m_remoteImageBuffers.take(renderingResourceIdentifier).get();
+    MESSAGE_CHECK(success, "Resource is being released before being cached."_s);
 }
 
 void RemoteRenderingBackend::createRemoteImageBufferSet(RemoteImageBufferSetIdentifier bufferSetIdentifier, WebCore::RenderingResourceIdentifier displayListIdentifier)
@@ -604,10 +599,7 @@ RefPtr<ImageBuffer> RemoteRenderingBackend::takeImageBuffer(RenderingResourceIde
     RefPtr remoteImageBuffer = remoteImageBufferReceiveQueue.get();
     remoteImageBufferReceiveQueue.reset();
     ASSERT(remoteImageBuffer->hasOneRef());
-    Ref imageBuffer = remoteImageBuffer->imageBuffer();
-    if (imageBuffer->renderingMode() == RenderingMode::Accelerated)
-        m_sharedResourceCache->didTakeAcceleratedImageBuffer();
-    return imageBuffer;
+    return remoteImageBuffer->imageBuffer();
 }
 
 void RemoteRenderingBackend::terminateWebProcess(ASCIILiteral message)
